bad/assign_field_array_fcall_bool.example_compiler_output
ERROR
[1mbad/assign_field_array_fcall_bool.lat:8:12: [1;31merror: [0;1massigning to `int[]` from incompatible type `boolean`[m
	foo().fld = true;
	          [1;32m^[m
